--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "bugs": {
     "url": "https://github.com/inevitable-team/tfjs-transfer-learner/issues"
   },
-  "homepage": "https://github.com/inevitable-team/tfjs-transfer-learner#readme"
+  "homepage": "https://github.com/inevitable-team/tfjs-transfer-learner#readme",
+  "dependencies": {
+    "@tensorflow/tfjs-node": "^1.2.9",
+    "fs": "0.0.1-security",
+    "sharp": "^0.23.1"
+  }
 }
